[package]
name = "ledger-utils"
version = "0.2.0"
authors = ["Marek Gibek <marek-dev@yandex.com>"]
description = "Ledger-cli (https://www.ledger-cli.org/) file processing Rust library, useful for calculating balances, creating reports etc."
license = "Unlicense"
repository = "https://github.com/marek-g/rust-ledger-utils"
readme = "README.md"
documentation = "https://docs.rs/ledger-utils"
keywords = ["ledger", "ledger-cli", "reports", "accounting", "finance"]
categories = ["parser-implementations"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ledger-parser = "5.1"
rust_decimal = "1"
chrono = "0.4"
